feat: require and send token to identify request
